@@ -1987,7 +1987,7 @@
 			<top>110</top>
 			<right>20</right>
 			<width>500</width>
-			<height>240</height>
+			<height>340</height>
 			<control type="group">
 
 				<!-- Card -->
@@ -2017,6 +2017,15 @@
 						<texturefocus colordiffuse="deepskyblue">white.png</texturefocus>
 						<texturenofocus colordiffuse="AA212121">white.png</texturenofocus>
 						<label>Save Sort Options</label>
+						<align>right</align>
+						<textcolor>FFFFFFFF</textcolor>
+					</control>
+					<control type="button" id="9003">
+						<height>80</height>
+						<textoffsetx>20</textoffsetx>
+						<texturefocus colordiffuse="deepskyblue">white.png</texturefocus>
+						<texturenofocus colordiffuse="AA212121">white.png</texturenofocus>
+						<label>Reset To Default</label>
 						<align>right</align>
 						<textcolor>FFFFFFFF</textcolor>
 					</control>
